@@ -2,9 +2,9 @@
   -webkit-column-count: 3;
      -moz-column-count: 3;
           column-count: 3;
-  -webkit-column-width: 320px;
-     -moz-column-width: 320px;
-          column-width: 320px;
+  -webkit-column-width: 350px;
+     -moz-column-width: 350px;
+          column-width: 350px;
 }
 
 
