@@ -1,6 +1,8 @@
 0.9.2
  - enh: show metadata table caption at top
  - enh: show "pipeline" metadata
+ - enh: html.escape displayed metadata
+ - enh: display correct alias medium
 0.9.1
  - ref: do not use tempfile.TemporaryDirectory
  - ref: create /tmp/matplotlib before importing matplotlib
